[gd_scene load_steps=41 format=3 uid="uid://de2y4cpmqk46j"]

[ext_resource type="PackedScene" uid="uid://dfoywfoh5w7ly" path="res://scenes/enemy.tscn" id="1_nge5k"]
[ext_resource type="Texture2D" uid="uid://dc788falopt7j" path="res://assets/The Crusty Crew/Sprites/Fierce Tooth/claw.png" id="1_pq2vu"]
[ext_resource type="Script" uid="uid://cvhpj5gaxa6d4" path="res://scripts/claw.gd" id="1_xrky6"]
[ext_resource type="PackedScene" uid="uid://b2v86d6n0a562" path="res://scenes/exclamation.tscn" id="2_pq2vu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cpfno"]
atlas = ExtResource("1_pq2vu")
region = Rect2(108, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_a27lu"]
atlas = ExtResource("1_pq2vu")
region = Rect2(144, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhicl"]
atlas = ExtResource("1_pq2vu")
region = Rect2(180, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xkvq"]
atlas = ExtResource("1_pq2vu")
region = Rect2(216, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_runrf"]
atlas = ExtResource("1_pq2vu")
region = Rect2(252, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5u6v"]
atlas = ExtResource("1_pq2vu")
region = Rect2(0, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_12bj3"]
atlas = ExtResource("1_pq2vu")
region = Rect2(36, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fracb"]
atlas = ExtResource("1_pq2vu")
region = Rect2(72, 0, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgrb7"]
atlas = ExtResource("1_pq2vu")
region = Rect2(0, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0pav"]
atlas = ExtResource("1_pq2vu")
region = Rect2(36, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxaqu"]
atlas = ExtResource("1_pq2vu")
region = Rect2(72, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_20esr"]
atlas = ExtResource("1_pq2vu")
region = Rect2(108, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qni7j"]
atlas = ExtResource("1_pq2vu")
region = Rect2(144, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yypj2"]
atlas = ExtResource("1_pq2vu")
region = Rect2(180, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah013"]
atlas = ExtResource("1_pq2vu")
region = Rect2(216, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxt4y"]
atlas = ExtResource("1_pq2vu")
region = Rect2(252, 34, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_apkd0"]
atlas = ExtResource("1_pq2vu")
region = Rect2(0, 102, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ihl"]
atlas = ExtResource("1_pq2vu")
region = Rect2(36, 102, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_amauu"]
atlas = ExtResource("1_pq2vu")
region = Rect2(72, 102, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6stg"]
atlas = ExtResource("1_pq2vu")
region = Rect2(108, 102, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrky6"]
atlas = ExtResource("1_pq2vu")
region = Rect2(0, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u52l"]
atlas = ExtResource("1_pq2vu")
region = Rect2(36, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0718"]
atlas = ExtResource("1_pq2vu")
region = Rect2(72, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_psfm8"]
atlas = ExtResource("1_pq2vu")
region = Rect2(108, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jixr"]
atlas = ExtResource("1_pq2vu")
region = Rect2(144, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ynvx"]
atlas = ExtResource("1_pq2vu")
region = Rect2(180, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcm2b"]
atlas = ExtResource("1_pq2vu")
region = Rect2(216, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdmc"]
atlas = ExtResource("1_pq2vu")
region = Rect2(252, 136, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1u0q"]
atlas = ExtResource("1_pq2vu")
region = Rect2(0, 204, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_41o66"]
atlas = ExtResource("1_pq2vu")
region = Rect2(36, 204, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_64o1s"]
atlas = ExtResource("1_pq2vu")
region = Rect2(72, 204, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0at83"]
atlas = ExtResource("1_pq2vu")
region = Rect2(108, 204, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5al4"]
atlas = ExtResource("1_pq2vu")
region = Rect2(144, 204, 36, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_63sx0"]
atlas = ExtResource("1_pq2vu")
region = Rect2(180, 204, 36, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1u0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpfno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a27lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhicl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xkvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_runrf")
}],
"loop": false,
"name": &"attack_bite",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5u6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12bj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fracb")
}],
"loop": false,
"name": &"attack_prepare",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgrb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0pav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxaqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20esr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qni7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yypj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah013")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxt4y")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apkd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ihl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amauu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6stg")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrky6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u52l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0718")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psfm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jixr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ynvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcm2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdmc")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1u0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41o66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64o1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0at83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5al4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63sx0")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrky6"]
size = Vector2(19, 22)

[node name="claw" type="Node2D"]
script = ExtResource("1_xrky6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q1u0q")
animation = &"idle"
flip_h = true

[node name="enemy" parent="." instance=ExtResource("1_nge5k")]

[node name="AttackArea" type="Area2D" parent="enemy" groups=["enemies"]]
position = Vector2(-11, -8)
collision_layer = 5
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/AttackArea"]
position = Vector2(11.5, 10)
shape = SubResource("RectangleShape2D_xrky6")

[node name="AttackRayRight" type="RayCast2D" parent="enemy/AttackArea"]
position = Vector2(14, 10)
target_position = Vector2(14, 0)
collision_mask = 2
hit_from_inside = true

[node name="AttackRayLeft" type="RayCast2D" parent="enemy/AttackArea"]
position = Vector2(9, 10)
target_position = Vector2(-14, 0)
collision_mask = 2
hit_from_inside = true

[node name="AttackCooldownTimer" type="Timer" parent="enemy/AttackArea"]
wait_time = 2.0
one_shot = true

[node name="DamageCooldownTimer" type="Timer" parent="enemy/AttackArea"]
wait_time = 0.5
one_shot = true

[node name="RayCastRight" type="RayCast2D" parent="enemy"]
position = Vector2(1, 3)
target_position = Vector2(17, 0)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="enemy"]
position = Vector2(0, 3)
target_position = Vector2(-17, 0)
collide_with_areas = true

[node name="RayCastRightBottom" type="RayCast2D" parent="enemy"]
position = Vector2(11, 4)
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="RayCastLeftBottom" type="RayCast2D" parent="enemy"]
position = Vector2(-10, 4)
target_position = Vector2(0, 10)
collide_with_areas = true

[node name="EyeSightRay" type="RayCast2D" parent="enemy"]
position = Vector2(0, -18)
target_position = Vector2(0, 3)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="Exclamation" parent="." instance=ExtResource("2_pq2vu")]
position = Vector2(0, -20)

[node name="PlayerDetectTimer" type="Timer" parent="."]

[connection signal="killzone_entered" from="enemy" to="." method="_on_enemy_killzone_entered"]
[connection signal="body_entered" from="enemy/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="enemy/AttackArea/AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="enemy/AttackArea/DamageCooldownTimer" to="." method="_on_damage_cooldown_timer_timeout"]
[connection signal="timeout" from="PlayerDetectTimer" to="." method="_on_player_detect_timer_timeout"]
